--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "antd": "^5.22.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-facebook": "^9.0.12",
     "react-scripts": "5.0.1",
-    "sass": "^1.81.0",
+    "react-share": "^5.1.1",
     "swiper": "^10.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -44,6 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "sass": "^1.82.0",
+    "sass-loader": "^13.3.3"
   }
 }
